education section restyled

--- a/first.html
+++ b/first.html
@@ -38,7 +38,7 @@
                 <a class="topnav-btn" href="#work">Work</a>
             </li>
             <li>
-                <a class="topnav-btn" href="#recommendations">Recommendations</a>
+                <a class="topnav-btn" href="#recommendations">References</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -54,9 +54,8 @@
                 <p id='title'>Web-developer</p>
             </textbox>
         </div>
-		<div class="summary">
-		<p>SUMMARY</p>
-		<p>Business Information Technologies student with over 6 years of work experience as an administrative manager. 
+		<h2 class="menu-items" >SUMMARY</h2>
+		<p id="summary">Business Information Technologies student with over 6 years of work experience as an administrative manager. 
 		During my work at various companies, I have been involved in administrative management, customer consulting, marketing, database management, 
 		event management and many other tasks. Being a student of software development program, I have acquired some expertise in web-development 
 		via school projects and currently I am looking for an opportunity to apply both my old and new knowledge into practice in order to build 
@@ -65,9 +64,9 @@
 	  </div>
 
     <!-- Skills -->
-	<div id="skills-section">
+	<div id="skills-section" >
 
-    <h2 class="menu-items">Skills</h2>
+    <h2 class="menu-items" id="skills">Skills</h2>
 
     <div class="filter-button-group">
         <button class="filter" data-filter="*"> Show all</button>
@@ -283,7 +282,7 @@
     <!-- Projects -->
 
 	 <div id=projects-section>
-    <h2 class="menu-items">Projects</h2>
+    <h2 class="menu-items" id="projects">Projects</h2>
 
     <div id="projects-tile-container">
         <a href="#" target="_blank" class="projects-tile" data-role="tile" data-size="wide" data-effect="hover-zoom-right">
@@ -321,8 +320,6 @@
             </div>
             <span class="branding-bar fg-dark"></span>
         </a>
-
-
 
         <a href="https://github.com/palagina/VinylShopApp/tree/master/vinylshop" target="_blank" class="projects-tile" data-role="tile"
             data-size="wide" data-effect="hover-zoom-up">
@@ -364,6 +361,8 @@
     </div>
 
     <!-- Education -->
+
+	<div id="education-section">
     <h2 class="menu-items" id="education">Education</h2>
 
     <div class="timeline">
@@ -399,8 +398,11 @@
             </div>
         </div>
     </div>
+	 </div>
 
     <!-- Work -->
+	<div id="work-section">
+
     <h2 class="menu-items" id="work">Work</h2>
 
     <div class="work-flex-container" id="work-popup-button">
@@ -420,14 +422,31 @@
         <div class="work-flex">Haaga-Helia StartUp School</div>
         <div class="work-flex">InsideOut Escape Games Oy</div>
     </div>
+	    </div>
 
     <!-- Recommendations -->
-    <h2 class="menu-items" id="recommendations">Recommendations</h2>
+	<div id="recommendations-section">
+
+    <h2 class="menu-items" id="recommendations">References</h2>
+
+<div class="quote"> 
+        <div class="quote-container">
+            <blockquote>
+                <p>Overall, fantastic! I'd recommend them to anyone looking for a creative, thoughtful, and professional team.”</p>
+            </blockquote>  
+            <cite><span>Kristi Bruno</span><br>
+                Social Media Specialist<br>
+                American College of Chest Physicians
+            </cite>
+        </div>
+    </div>  
+
 
     <!-- Contact -->
-    <h2 class="menu-items" id="contact">Contact</h2>
+       <div id="contact-section">
+	   
+	   <h2 class="menu-items" id="contact">Contact</h2>
 
-    <div id="contact-container">
         <ul id="contact-form">
             <li>
                 <a href="tel:+358413680029">
