--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <link href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="first.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- this one should be the last one-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-    <script type="text/javascript" src="first.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body class="body">
