--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div id="about">
-        <img id="pic" src="images/siga.jpg" alt="my photo">
+        <img id="pic" src="images/main.jpg" alt="my photo">
         <div id="name-box">
             <textbox class="textbox">
                 <h2 id='name'>Mariia Palagina</h2>
@@ -93,7 +93,7 @@
 
         <div class="skill-item frontend">
             <p class="experience">6</p>
-            <img class="logo" src="images/css.png" alt="CSS logo"></img>
+            <img class="logo" src="images/css-icon.png" alt="CSS logo"></img>
             <h6 class="name">CSS </h6>
             <div class="rating-bar">
                 <div class="rate-6">
