viking.jpg edit

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
             <a href="http://toughviking.se/en/" target="_blank" class="projects-tile" data-role="tile" data-size="wide" data-effect="hover-zoom-up">
                 <div class="slide-front">
-                    <img src="images/viking.jpg" class="w-100">
+                    <img src="images/viking.JPG" class="w-100">
                 </div>
                 <div class="projects-tile-text slide-back d-flex flex-justify-center flex-align-center p-4">
                     <div style="font-size: 15px; text-align: center">
