main image styles changed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -45,14 +46,17 @@
             <li>
                 <a href="#contact">Contact</a>
             </li>
-            <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+
+<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+ <i class="fa fa-bars"></i> </a>
+
         </ul>
 
     </div>
 
     <div id="about">
         <div>
-            <img id="pic" src="images/main.jpg" alt="my photo">
+            <div id="pic"></div>
             <div id="name-box">
                 <textbox class="textbox">
                     <h2 id='name'>Mariia Palagina</h2>
