top nav styles edit

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <script type="text/javascript" src="script.js"></script>
 </head>
 
-<body class="body">
+<body class="body" data-spy="scroll" data-target="#navbar" data-offset="50">
 
     <!-- Navbar -->
-    <div class="topnav" id="topnav">
+    <div class="topnav" id="topnav" data-target="#navbar">
         <ul>
             <li>
                 <a class=" topnav-btn active" href="#about">About</a>
@@ -46,11 +46,10 @@
             <li>
                 <a href="#contact">Contact</a>
             </li>
-
-<a href="javascript:void(0);" class="icon" onclick="myFunction()">
- <i class="fa fa-bars"></i> </a>
-
         </ul>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
 
     </div>
 
