--- a/index.html
+++ b/index.html
@@ -20,39 +20,39 @@
     <script type="text/javascript" src="script.js"></script>
 </head>
 
-<body class="body" data-spy="scroll" data-target="#navbar" data-offset="50">
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
     <!-- Navbar -->
-    <div class="topnav" id="topnav" data-target="#navbar">
-        <ul>
+    <nav id="myTopnav" class="topnav">
+        <ul >
             <li>
-                <a class=" topnav-btn active" href="#about">About</a>
+                <a href="#about" class=" topnav-btn active">About</a>
             </li>
             <li>
-                <a class="topnav-btn" href="#skills">Skills</a>
+                <a href="#skills" class="topnav-btn" >Skills</a>
             </li>
             <li>
-                <a class="topnav-btn" href="#projects">Projects</a>
+                <a href="#projects" class="topnav-btn" >Projects</a>
             </li>
             <li>
-                <a class="topnav-btn" href="#education">Education</a>
+                <a href="#education" class="topnav-btn" >Education</a>
             </li>
             <li>
-                <a class="topnav-btn" href="#work">Work</a>
+                <a href="#work" class="topnav-btn" >Work</a>
             </li>
             <li>
-                <a class="topnav-btn" href="#recommendations">References</a>
+                <a href="#recommendations"  class="topnav-btn" >References</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="#contact" class="topnav-btn" >Contact</a>
             </li>
         </ul>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
-
-    </div>
-
+    </nav>
+    
+    
     <div id="about">
         <div>
             <div id="pic"></div>
@@ -70,7 +70,6 @@
             database management, event management and many other tasks. Being a student of software development program,
             I have acquired some expertise in web-development via school projects and currently I am looking for an opportunity
             to apply both my old and new knowledge into practice in order to build a career in software development field.</p>
-    </div>
     </div>
 
     <!-- Skills -->
@@ -290,7 +289,6 @@
     </div>
 
     <!-- Projects -->
-
     <div id=projects-section>
         <h2 class="menu-items" id="projects">Projects</h2>
 
@@ -387,7 +385,6 @@
     </div>
 
     <!-- Education -->
-
     <div id="education-section">
         <h2 class="menu-items" id="education">Education</h2>
 
@@ -627,6 +624,7 @@
             </li>
         </ul>
     </div>
+
 </body>
 
 </html>
