mobile version first commit

--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
                 <a href="#contact" class="topnav-btn" >Contact</a>
             </li>
         </ul>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a href="javascript:void(0);" class="icon" onclick="mobileMenuFunction()">
             <i class="fa fa-bars"></i>
         </a>
     </nav>
-    
     
     <div id="about">
         <div>
@@ -598,9 +597,7 @@
 
     <!-- Contact -->
     <div id="contact-section">
-
         <h2 class="menu-items" id="contact">Contact</h2>
-
         <ul id="contact-form">
             <li>
                 <a href="tel:+358413680029">
