contact form styles edit

--- a/index.html
+++ b/index.html
@@ -601,22 +601,26 @@
         <ul id="contact-form">
             <li>
                 <a href="tel:+358413680029">
-                    <img class="contact-icon" src="images/phone.png" alt="phone icon"> +358 41 3680 029
+                    <img class="contact-icon" src="images/phone.png" alt="phone icon"> 
+                    <span>+358 41 3680 029</span>
                 </a>
             </li>
             <li>
                 <a href="mailto:mariia.palagina@gmail.com">
-                    <img class="contact-icon" src="images/email.png" alt="email icon"> mariia.palagina@gmail.com
+                    <img class="contact-icon" src="images/email.png" alt="email icon"> 
+                    <span>mariia.palagina@gmail.com</span>
                 </a>
             </li>
             <li>
                 <a href="https://fi.linkedin.com/in/mariia-palagina">
-                    <img class="contact-icon" src="images/linkedin.png" alt="linkedin icon"> LinkedIn
+                    <img class="contact-icon" src="images/linkedin.png" alt="linkedin icon"> 
+                    <span>LinkedIn</span>
                 </a>
             </li>
             <li>
                 <a href="https://github.com/palagina">
-                    <img class="contact-icon" src="images/github.png" alt="github icon"> Github
+                    <img class="contact-icon" src="images/github.png" alt="github icon"> 
+                    <span>Github</span>
                 </a>
             </li>
         </ul>
